--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <%= link_to "Purl", root_path, class: "navbar-brand" %>
+  <%= link_to "Purl", user_signed_in? ? dashboard_index_path : root_path, class: "navbar-brand" %>
   <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,16 +19,26 @@
         <a class="nav-link" href="#">Help</a>
       </li>
     </ul> -->
-    <!-- <form class="form-inline mt-2 mt-md-0 ml-auto">
-      <input class="form-control mr-sm-2" type="text" placeholder="New Bucket" aria-label="Create">
-      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Create</button>
-    </form> -->
-    <%= form_tag buckets_path, class: "form-inline mt-2 mt-md-0 ml-auto", method: "post" do %>
-      <%= text_field_tag "bucket[name]", nil, type: "text", class: "form-control mr-sm-2", placeholder: "New Bucket" %>
-      <%= submit_tag "Create bucket", class: "btn btn-outline-success my-2 my-sm-0" %>
-    <% end %>
-    <% if @bucket %>
-      <%= link_to "Remove Bucket", @bucket, method: :delete, class: "btn btn-outline-danger m-2 my-sm-0" %>
-    <% end %>
+    <ul class="navbar-nav ml-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item dropdown">
+          <%= link_to "#", class: "nav-link font-size-md dropdown-toggle", id: "dropdown02", "data-toggle" => "dropdown", "aria-haspopup"=>"true", "aria-expanded"=>"false" do %>
+              <%= current_user.email %>
+          <% end %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown02" id="userDropdown">
+              <%= link_to "Settings", edit_user_registration_path, class: "dropdown-item font-size-sm" %>
+              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "dropdown-item font-size-sm" %>
+          </div>
+        </li>
+      <% else %>
+        <%= link_to "#", class: "nav-link font-size-md dropdown-toggle", id: "dropdown01", "data-toggle" => "dropdown", "aria-haspopup"=>"true", "aria-expanded"=>"false" do %>
+                Start here
+          <% end %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+              <%= link_to "Sign in", new_user_session_path, class: "dropdown-item" %>
+              <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
+          </div>
+      <% end %>
+    </ul>
   </div>
 </nav>
