--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,6 +3,6 @@
     <%= render 'common/side' %>
   </nav>
   <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-    <h1>User Dashboard</h1>
+    <h1 class="dark-gray">Create or Active Bucket</h1>
   </main>
 </div>
