--- a/app/views/items/_items.html.erb
+++ b/app/views/items/_items.html.erb
@@ -3,15 +3,15 @@
     <tr>
       <th>Filename</th>
       <th>Size</th>
-      <th></th>
+      <th>Url</th>
     </tr>
   </thead>
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <%= content_tag :td, item.name %>
-        <td></td>
-        <td></td>
+        <td><%= link_to item.name, item.file.url, target: "blank" %></td>
+        <td><%= Filesize.from("#{item.file.size} B").pretty %></td>
+        <td><%= render "input_group", item: item %></td>
       </tr>
     <% end %>
   </tbody>
