--- a/app/views/items/_input_group.html.erb
+++ b/app/views/items/_input_group.html.erb
@@ -1,6 +1,6 @@
 <div class="input-group input-group-sm">
 
-  <%= text_field_tag :file_url, item.file.url, 
+  <%= text_field_tag :file_url, item.url, 
     id: "item_#{item.id}",
     class: "form-control",
     "aria-label" => "Text input",
